
VBScan 0.1.3
------------------------
  - Change Default UserAgent
  - Fixed Reported Bugs


VBScan 0.1.2
------------------------
  - Added “HTTPS Support”
  - Fixed color bug
  - Fixed Reported Bugs


VBScan 0.1.1
------------------------
  - Initial release