@@ -1,8 +1,8 @@
 #start admincp/modcp
 print "\n[+] Checking admincp/modcp path\n";
 
-$source=$ua->get("$target/admincp")->decoded_content;
-if($source =~ m/Admin Control Panel/i){
+$source=$ua->get("$target/admincp/index.php")->decoded_content;
+if($source =~ m/Admin Control Panel/i || $source =~ m/form action="..\/login.php?do=login"/i){
     print color("yellow");
     print "[++] admincp Found\n$target/admincp\n";
     print color("blue");
@@ -12,8 +12,8 @@ if($source =~ m/Admin Control Panel/i){
     print color("blue");
     $amtf=1;
 }
-$source=$ua->get("$target/modcp")->decoded_content;
-if($source =~ m/Moderator Control Panel/i){
+$source=$ua->get("$target/modcp/index.php")->decoded_content;
+if($source =~ m/Moderator Control Panel/i || $source =~ m/ADMINHASH/i){
     print color("yellow");
     print "[++] modcp Found\n$target/modcp\n";
     print color("blue");
